fix: 🐛 Manage left and right padding on small screen widths
Fixes #7 Predefined as a custom property of 1rem, but can be cusomized when a component is declared

--- a/src/globals/scss/_variables.scss
+++ b/src/globals/scss/_variables.scss
@@ -108,8 +108,10 @@ $modular-scale-ratio: 1.25;
 
 
 // Layout variables for Bourbon Neat
+$pixel-width: 1080;
+$padded-width: calc($pixel-width - 20);
 $browser-context: 16;
-$max-width: #{math.div(1080,$browser-context)}rem;
+$max-width: #{math.div($pixel-width,$browser-context)}rem;
 $grids-columns: 12;
 $column: 12;
 $gutter: 1em;
